etc/deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: http-kistek-consulting
spec:
  replicas: 1
  selector:
    matchLabels:
      name: http-kistek-consulting
      version: "1"
  template:
    metadata:
      labels:
        name: http-kistek-consulting
        version: "1"

    spec:
      volumes:
        - name: dhparam-pem
          secret:
            secretName: dhparam-1.pem
        - name: hostsys
          hostPath:
            path: /sys

      containers:

        - name: http-kistek-consulting
          image: chrishiestand/nginx-kistek-consulting-site:2017_09_22_20_39_04
          ports:
            - name: http
              containerPort: 1080
            - name: https
              containerPort: 1443
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
          volumeMounts:
          - name: dhparam-pem
            readOnly: true
            mountPath: /etc/nginx/ssl
          readinessProbe:
            httpGet:
              path: /
              port: https
              scheme: HTTPS
            initialDelaySeconds: 3
            timeoutSeconds: 3
            periodSeconds: 4
            failureThreshold: 1
          livenessProbe:
            httpGet:
              path: /
              port: https
              scheme: HTTPS
            initialDelaySeconds: 10
            timeoutSeconds: 3
            periodSeconds: 5
            failureThreshold: 3
          lifecycle:
            preStop:
              exec:
                command: ["/usr/sbin/nginx","-s","quit"]
