etc/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vhosts
spec:
  backend:
    serviceName: virtualhost-nodeport
    servicePort: 80
